[project]
name = "tmb"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.4.1",
    "aiogram-i18n==1.4.0",
    "alembic==1.13.1",
    "apscheduler>=3.11.0",
    "asyncpg==0.29.0",
    "fastapi==0.108.0",
    "fluent-runtime>=0.4.0",
    "loguru==0.7.2",
    "multicolorcaptcha>=1.2.0",
    "pillow==10.2.0",
    "psycopg2-binary>=2.9.10",
    "pydantic==2.5.2",
    "pydantic-settings==2.1.0",
    "python-dateutil==2.8.2",
    "python-multipart==0.0.6",
    "redis==5.0.1",
    "sqlalchemy==2.0.25",
    "uvicorn==0.25.0",
]

[dependency-groups]
dev = [
    "flake8==7.0.0",
    "mypy==1.8.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.2",
    "pytest-mock==3.12.0",
    "ruff>=0.12.1",
]

# =====================================
# RUFF КОНФИГУРАЦИЯ
# =====================================

[tool.ruff]
# Длина строки (совместимо с black)
line-length = 88
# Целевая версия Python
target-version = "py312"
# Директории с first-party кодом
src = ["tmb"]

# Исключения (если нужны)
exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pycache__",
    "migrations",  # Добавлено для Alembic
]

[tool.ruff.lint]
# 🔧 РАСШИРЕННЫЙ НАБОР ПРАВИЛ (объединили VS Code + pyproject.toml)
select = [
    "F",   # pyflakes (ошибки импорта, неиспользуемые переменные)
    "E",   # pycodestyle errors (PEP 8 ошибки)
    "W",   # pycodestyle warnings (PEP 8 предупреждения)
    "I",   # isort (сортировка импортов)
    "UP",  # pyupgrade (современный Python синтаксис)
    "N",   # pep8-naming (соглашения именования)
    "C90", # mccabe (сложность функций)
    "B",   # flake8-bugbear (потенциальные баги)
    "A",   # flake8-builtins (затенение встроенных функций)
    "C4",  # flake8-comprehensions (улучшение генераторов)
    "T20", # flake8-print (обнаружение print)
    # Дополнительные полезные правила:
    "SIM", # flake8-simplify (упрощение кода)
    "RET", # flake8-return (улучшение return)
    "ARG", # flake8-unused-arguments (неиспользуемые аргументы)
]

# Игнорируемые правила
ignore = [
    "E501",   # line too long (ruff formatter справится)
    "T201",   # print found (если используете print для дебага)
    "B008",   # do not perform function calls in argument defaults (для FastAPI зависимостей)
    "RET504", # unnecessary variable assignment before return (иногда полезно для читаемости)
]

# 🔧 ДОБАВЛЕНО: preview режим для новых функций
preview = true

# Автоисправления
fixable = [
    "F401", # удаление неиспользуемых импортов
    "I",    # сортировка импортов
    "UP",   # обновление синтаксиса
    "C4",   # упрощение comprehensions
    "SIM",  # упрощение кода
    "RET",  # исправление return
]

# Правила, которые нельзя автоисправлять
unfixable = [
    "B",    # потенциальные баги нужно исправлять вручную
    "ARG",  # неиспользуемые аргументы нужно анализировать
]

[tool.ruff.lint.isort]
# Настройки сортировки импортов
known-first-party = ["tmb"]
force-single-line = false
lines-after-imports = 2
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.mccabe]
# Максимальная сложность функций
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Специальные исключения для разных типов файлов
"__init__.py" = ["F401"]  # разрешить неиспользуемые импорты в __init__.py
"tests/**/*.py" = ["ARG", "S101"]  # разрешить неиспользуемые аргументы и assert в тестах
"migrations/**/*.py" = ["E501", "F401"]  # послабления для миграций Alembic

[tool.ruff.format]
# Настройки форматирования
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# 🔧 ДОБАВЛЕНО: форматирование кода в docstrings
docstring-code-format = true